added new features like search filtering dashboard etc

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/src/assets/paper-survey-form-icon-abstract-logo-vector-5058472.jpg" />
+  <link rel="icon" type="image/svg+xml" href="/src/assets/images/surveyz_primary_logo_rgb.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>SurveyMonkey</title>
 </head>
